[tool.poetry]
name = "luanti_cli"
version = "2.0.8"
description = "📦️ LuCI - Luanti Commandline Interface"
authors = ["Christian Decker <christian.decker@lookslikematrix.de>"]
license = "LGPL"
readme = "README.md"

[tool.poetry.scripts]
luci = "luanti_cli.__main__:cli"

[tool.poetry.dependencies]
python = "^3.13"
miney = "^0.5.8"
numpy = "^2.4.6"
trimesh = {extras = ["easy"], version = "^4.12.2"}
click = "^8.4.1"
assertpy = "^1.1"
pytest = "^9.0.3"
pytest-cov = "^7.1.0"
pre-commit = "^4.6.0"
ruff = "^0.15.16"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
