[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "luanti_cli"
version = "2.0.10"
requires-python = ">=3.13"
description = "📦️ LuCI - Luanti Commandline Interface"
authors = [
    {name = "Christian Decker", email = "christian.decker@lookslikematrix.de"},
]
license = "LGPL-3.0-or-later"
readme = "README.md"
dependencies = [
    "miney==0.5.8",
    "numpy==2.4.6",
    "trimesh[easy]==4.12.2",
    "click==8.4.1",
]

[project.optional-dependencies]
test = [
    "assertpy==1.1",
    "cyclonedx-bom==7.3.0",
    "pytest==9.0.3",
    "pytest-cov==7.1.0",
    "pre-commit==4.6.0",
    "ruff==0.15.16",
]

build = [
    "uv==0.11.19",
]

[project.scripts]
luci = "luanti_cli.__main__:cli"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
luanti_cli = ["bom.json"]
